# FullStackAPI/routes/route.js
@@ -5,7 +5,7 @@ const router = express.Router();
 router.get('/api/getAllData', controller.getAllData);
 router.post('/api/addNewEmp', controller.addNewEmp);
 router.delete('/api/deleteEmp', controller.deleteEmp);
-router.delete('/api/updateEmp', controller.updateEmp);
-
+router.put('/api/updateEmp', controller.updateEmp);
+router.get('/api/getAllDataWithSp', controller.getAllDataWithSp);
 
 module.exports = router;
